# ros2-node-composition-project

./: CMakeLists.txt  package.xml
include/my_components/: attach_client_component.hpp  attach_server_component.hpp  pre_approach_component.hpp
launch/: attach_to_shelf.launch.py
src/: attach_client_component.cpp  attach_server_component.cpp  manual_composition.cpp  pre_approach_component.cpp
